--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ background-color: white;
 }
 
 #main a {
-border: 0.5px solid;
+/* border: 0.5px solid; */
 padding:0.5em 0.5em  0.5em 0.5em;
 }
 
@@ -69,7 +69,7 @@ nav a{
 }
 
 nav a:hover, nav a:focus {
- opacity:0.3;
+ border-bottom: 0.5px solid;
 }
 
 /* In-text link styling */
@@ -99,8 +99,8 @@ border-bottom: 2px solid;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   color: white;
-  border: 1.5px solid rgb(55,98,48);
-  background-color: rgb(55,98,48);
+  border: 1.5px solid rgb(0,78,26);
+  background-color: rgb(0,78,26);
 
   text-decoration: none;
   transition-duration: 0.6s;
@@ -122,8 +122,8 @@ button{
 
   /* background-color:  */
   color: white;
-  border: 1.5px solid rgb(55,98,48);
-  background-color: rgb(55,98,48);
+  border: 1.5px solid rgb(0,78,26);
+  background-color: rgb(0,78,26);
   font-size: 16px;
   font-family: bodyFont;
   text-decoration: none;
@@ -159,7 +159,7 @@ img{
 textarea{
   padding:1em;
   width: 50%;
-  border: 1px solid rgb(53,50,48);
+  border: 1px solid rgb(0,78,26);
   background-color: transparent;
   width:50%;
   height:200px;
@@ -187,7 +187,7 @@ input[type=text]{
   padding:1em;
   width:100%;
   margin-bottom:1rem;
-  border: 1px solid rgb(53,50,48);
+  border: 1px solid;
   background-color: transparent;
   box-sizing: border-box;
 }
