--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,20 @@ height: 30px;
 /* border: 1px solid black; */
 }
 
+.cleanser{
+  background-image: url("../img/cleanser1.jpg");
+  background-size:contain;
+  background-repeat: no-repeat;
+  transition: 0.2s;
+  /* background-position: center; */
+  width:30vw;
+  height:30vw;
+}
+
+.cleanser:hover{
+background-image: url("../img/cleanser2.jpg");
+}
+
 nav{
   display:flex;
   justify-content:flex-end;
