--- a/css/fonts.css
+++ b/css/fonts.css
@@ -53,7 +53,7 @@ margin-top:0.5em;
 p {
   font-size: 12px;
   line-height:15px;
-  letter-spacing: 0.5px;
+  /* letter-spacing: 0.5px; */
   /* margin-top: 0; */
   margin-right:1rem;
   /* width:50%; */
