Created new nav bar
created nav.html
created nav.css

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -64,9 +64,9 @@ p {
   margin:1rem;
   width:50%;
 }
-#logo{
+.logo{
   font-family: graceCo;
-  padding-left: 1rem;
+  /* padding-left: 1rem; */
   /* text-align: center; */
 }
 
