--- a/css/nav.css
+++ b/css/nav.css
@@ -1,16 +1,22 @@
 .logo{
 text-align: center;
-padding: 0 1rem 1rem 1rem;
-border: 1px solid;
+/* padding: 0 1rem 1rem 1rem; */
+
 }
 
-.navigation{
-  /* display:flex; */
-  /* margin:0; */
 
+header{
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+}
+
+
+.navigation{
   align-items: baseline;
   text-align: center;
-  /* justify-content: center; */
+
+
 }
 
 nav a{
@@ -30,3 +36,33 @@ nav a{
   nav a:hover, nav a:focus {
    border-bottom: 1px solid;
   }
+
+
+.cart-icon{
+  margin-right:2rem;
+  width:30px;
+  height:30px;
+  background-color:#343434;
+  color:white;
+  border:none;
+  border-radius: 50%;
+  font-family:bolded;
+  font-size: 15px;
+  text-align: center;
+  justify-content: center;
+
+}
+
+.cart-icon:hover, .cart-icon:focus{
+  background-color:black;
+}
+
+.search-icon{
+  width: 30px;
+  height: 30px;
+  padding-left: 2rem;
+  color: red;
+}
+.search-icon:hover{
+
+}
