Finished product.html and product2.html
Added images into the img folder carousel, created additional product2 html file

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -33,7 +33,7 @@ font-weight: normal;
 }
 /* headers */
 h2 {
-  font-family: bolded;
+  /* font-family: bolded; */
   /* margin-left: 2rem; */
 
 }
@@ -70,6 +70,10 @@ p {
   /* text-align: center; */
 }
 
+#productbrand{
+  font-family: graceCo;
+}
+
 br{
   line-height: 20px;
 }
@@ -83,4 +87,10 @@ p a{
 span.price{
   float:right;
   font-size:14px;
+}
+
+#relatedheader{
+  font-family: graceCo;
+  font-size: 30px;
+  padding-left: 2rem;
 }
