--- a/css/listing.css
+++ b/css/listing.css
@@ -279,18 +279,24 @@ input[type=submit]:hover{
 /* PRODUCT DETAILED */
 .card{
   display:flex;
-  padding:1rem;
-  margin-top:2rem;
   width:65%;
   /* border:1px solid; */
   /* justify-content: center; */
   position:relative;
   transform: translate(-50%,0);
   left:50%;
+  margin-left:10rem;
+  /* max-width: 57.5%; */
+  margin-top:-2rem;
+  padding:5rem;
 }
 
 .cards{
   padding-bottom: 0.2rem;
+}
+
+#productimage{
+  min-width:103%;
 }
 
 .cards:hover{
@@ -307,6 +313,7 @@ width:50%;
 
 #info{
 width:50%;
+margin-top: 2.15em;
 }
 
 #add{
@@ -327,9 +334,9 @@ width:50%;
 }
 
 .description {
-  font-size: 12px;
-  line-height: 14px;
-  /* letter-spacing: 0.5px; */
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.5px;
   width: 100%;
 }
 
@@ -380,7 +387,7 @@ grid-row-gap: 2rem;
 width: 75%;
 padding-left:2rem;
 padding-right:2rem;
-margin-top:2rem;
+/* margin-top:2rem; */
 
 }
 
@@ -458,6 +465,7 @@ padding-left: 2rem;
 }
 
 #listingbrand {
+  margin-top: -1.2rem;
   padding-bottom: 1rem;
   border-bottom: solid 2px black;
 }
@@ -488,3 +496,21 @@ border-bottom: solid 1px black;
   display:inline-block;
   float:right;
 }
+
+#relatedsection{
+  background-color: #F6F6F6;
+}
+
+#relatedheader{
+  padding: 1rem;
+  padding-bottom: 0rem;
+}
+
+@media screen and (max-width:600px){
+  .card{
+  
+    flex-wrap:wrap;
+    margin-left:0;
+    width: 100%
+
+  }
