--- a/css/checkoutv2.css
+++ b/css/checkoutv2.css
@@ -1,38 +1,57 @@
+/* .listing{
+display:grid;
+grid-template-columns:1fr 1fr 1fr;
+align-items: center;
+grid-column-gap: 1.5rem;
+grid-row-gap: 2rem;
+width: 75%;
+padding-left:2rem;
+padding-right:2rem;
+margin-top:2rem; */
 
-
-.container{
-
-display:flex;
-justify-content: center;
-margin-bottom:3rem;
-
-
-}
 
 .checkout{
-  display:flex;
-  flex-wrap: wrap;
-  width:75%;
-}
-
-.checkout2{
-  display:flex;
-  flex-wrap: wrap;
+align-content:center;
+justify-content: center;
+display:grid;
+grid-template-columns: 2fr 2fr;
+/* grid-column-gap: 1.5rem; */
+/* width:85%; */
 
 }
-.shoppingCart{
-  display:grid;
-  grid-template-columns: 4fr 4fr 1fr 1fr;
-  grid-row-gap: 1em;
-  grid-column-gap: 1em;
-  padding-left:1em;
-  padding-right: 1em;
-  padding-top: 1em;
+
+.payment{
+  padding-left:5rem;
+  padding-right: 5rem;
   /* border: 1px solid; */
-  flex:70%;
 
 }
+.summary{
+  background-color: #F6F6F6;
+  /* border: 1px solid; */
 
+  padding-left:1rem;
+  padding-right:1rem;
+  padding-top: 1rem;
+}
+
+.productsum{
+  display:grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+}
+@media screen and (max-width:80rem){
+  .productsum{
+    grid-template-columns:1fr 1fr;
+  }
+}
+
+@media screen and (max-width:40rem){
+  .productsum{
+    grid-template-columns:1fr 1fr;
+  }
+}
 .side2{
   display:block;
   /* background-color: pink; */
@@ -42,13 +61,6 @@ margin-bottom:3rem;
 
 }
 
-.orderSum{
-  font-family:bolded;
-}
-
-.order{
-font-size: 15px;
-}
 
 .subtotal{
   float: right;
@@ -62,28 +74,25 @@ font-size: 15px;
   text-align: right;
 }
 
-.col-3{
-text-align: center;
-align-items: center;
-}
-
-.col-4{
-  text-align: center;
-  align-items: center;
-}
-
-.productName{
-  margin-top:0;
-  font-size:16px;
-}
-.qty{
-  margin:0;
-  font-size: 14px;
-}
-
 .summary{
   align-items:flex-end;
 }
+
+.summary-info{
+padding-top:2rem;
+}
+
+@media screen and (max-width:40rem){
+  .checkout{
+  grid-template-columns: 1fr;
+
+  }
+}
+/* @media screen and (max-width:600px{
+  .productsum{
+    flex-grow:2;
+  }
+  } */
 
 /* @media screen and (max-width:300px){
   .container{
@@ -96,7 +105,7 @@ align-items: center;
   }
 } */
 
-@media screen and (max-width:600px){
+/* @media screen and (max-width:600px){
   .payment_form{
     flex-wrap:wrap;
   }
@@ -106,13 +115,9 @@ align-items: center;
   }
 
 
-}
+} */
 
-.payment_form{
-  margin-left: 1rem;
-  justify-content: center;
 
-}
 
 .areaCode{
   display:flex;
@@ -133,18 +138,7 @@ align-items: center;
   justify-content: flex-end;
 }
 
-.checkit{
-text-align: center;
 
-}
-
-.container2{
-  width:50%;
-  position:relative;
-  transform: translate(-50%,0);
-  left:50%;
-
-}
 
 .cartText[type=text]{
 
