--- a/css/listing.css
+++ b/css/listing.css
@@ -26,10 +26,10 @@ background-color: white;
 padding:0.5em 0em  0.2em 0em;
 }
 
-#navigation{
+/* #navigation{
   padding-left: 1rem;
 
-}
+} */
 
 /* company nav */
 header{
@@ -508,7 +508,6 @@ border-bottom: solid 1px black;
 
 @media screen and (max-width:600px){
   .card{
-  
     flex-wrap:wrap;
     margin-left:0;
     width: 100%
