--- a/css/nav.css
+++ b/css/nav.css
@@ -13,9 +13,10 @@ header{
 
 
 .navigation{
+  display: flex;
   align-items: baseline;
   text-align: center;
-
+  justify-content: center;
 
 }
 
@@ -50,6 +51,7 @@ nav a{
   font-size: 15px;
   text-align: center;
   justify-content: center;
+  padding:0;
 
 }
 
@@ -60,8 +62,8 @@ nav a{
 .search-icon{
   width: 30px;
   height: 30px;
-  padding-left: 2rem;
-  color: red;
+  margin-left: 2rem;
+
 }
 .search-icon:hover{
 
