--- a/css/checkoutv2.css
+++ b/css/checkoutv2.css
@@ -20,6 +20,7 @@ grid-template-columns: 2fr 1fr;
   margin-bottom:1rem;
 }
 .payment{
+  margin-top: 1rem;
   padding-left:3rem;
   padding-right: 3rem;
 
