--- a/css/main.css
+++ b/css/main.css
@@ -11,43 +11,21 @@ html{
 background-color: white;
 }
 
+.indexheader{
+  justify-content: center;
+}
+.checkoutlogo{
+  text-align: center;
+  display: flex;
+}
+
 .element {
   padding-left: 1rem;
   padding-bottom: 1rem;
   border: 1px solid black;
   margin: 2rem;
 }
-/* for styleguide nav */
-#mainH{
-  display:inline-block;
-  align-items: baseline;
 
-  margin-bottom: 2rem;
-}
-
-#main a {
-/* border: 0.5px solid; */
-padding:0.5em 0em  0.2em 0em;
-}
-
-
-
-/* company nav */
-/* header{
-  display:flex;
-  align-items: baseline;
-  justify-content: space-between;
-} */
-
-#icon{
-background-image: url("../img/Asset9.png");
-background-size:contain;
-background-repeat: no-repeat;
-background-position: center;
-width: 30px;
-height: 30px;
-/* border: 1px solid black; */
-}
 
 .imagelisting{
   background-size:contain;
@@ -106,29 +84,6 @@ background-image: url("../img/cleanser2.jpg");
   background-image: url("../img/waterserum2.jpg");
 }
 
-/* nav{
-  display:flex;
-  justify-content:flex-end;
-  align-items: center;
-
-} */
-
-/* nav a{
-
-  font-family:bodyFont;
-  font-size:15px;
-  /* text-transform: lowercase; */
-  margin-right: 2em;
-  text-align: center;
-  text-decoration: none;
-  color: black;
-  transition:0.3s;
-
-} */
-
-/* nav a:hover, nav a:focus {
- border-bottom: 0.5px solid;
-} */
 
 /* In-text link styling */
 .text-link{
@@ -216,7 +171,7 @@ img{
 textarea{
   padding:1em;
   width: 50%;
-  border: 1px solid rgb(0,78,26);
+  border: 1px solid ;
   background-color: transparent;
   width:50%;
   height:200px;
@@ -434,4 +389,9 @@ padding-left: 2rem;
 .sum2{
 width:50%;
 
+}
+
+.indexlogo{
+font-family: graceCo;
+text-align: center;
 }
