Created About page
added about.html and contact us info

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -19,7 +19,7 @@ body {
 
 /* company name */
 h1{
-  font-family: mono;
+  font-family: graceCo;
   text-decoration: none;
   letter-spacing: 1px;
   font-weight: normal;
