--- a/css/main.css
+++ b/css/main.css
@@ -395,3 +395,14 @@ width:50%;
 font-family: graceCo;
 text-align: center;
 }
+
+.about{
+  margin-top:3rem;
+  margin-right:2rem;
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3rem;
+}
+#form-review{
+  width:100%;
+}
