--- a/css/home.css
+++ b/css/home.css
@@ -10,16 +10,25 @@
 }
 
 #textandimg{
-position: relative;
- text-align: center;
+  position: relative;
 }
 
 #hometext{
+  position: absolute;
+  top: 45%;
+  left: 42%;
   color:#343434;
   font-family:GraceCo;
-  font-size: 50px;
-position: absolute;
-top: 40%;
-left: 50%;
-transform: translate(-50%, -50%);
+  font-size: 500%;
+}
+
+#listing{
+  padding-top:10rem;
+}
+
+#newreleasesection{
+
+  font-size: 5px;
+  display: flex;
+  justify-content: center;
 }
