--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,54 @@
   margin:0rem;
 } */
 
+.new-release{
+  text-align: center;
+  font-size: 2em;
+}
+.homebackground {
+  margin-top:1em;
+  position: relative;
+  width:100%;
+}
+
+.homeimage{
+  width:100%;
+  height:25em;
+  object-fit: cover;
+}
+
+.homebackground .landing-text{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  justify-content:center;
+  align-content:center;
+
+}
+.homebackground .shop-now{
+  /* position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%, -50%); */
+  margin-top:1em;
+  font-family:GraceCo;
+  background-color:transparent;
+  border: 1px solid;
+  color:black;
+  text-align:center;
+
+  text-decoration: none;
+}
+
+.homebackground .shop-now:hover {
+  background-color: black;
+  color:white;
+  text-decoration: none;
+}
 #homeimage{
   padding-top: 1rem;
   width: 100%;
