added viewport screen

--- a/css/checkoutv2.css
+++ b/css/checkoutv2.css
@@ -1,4 +1,10 @@
 
+/* .checkoutlogo2{
+  display:inline-block;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+} */
 .checkoutlogo{
   font-family: graceCo;
   text-align:center;
