--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,18 @@ input[type=submit]:hover{
   left:50%;
 }
 
+@media screen and (max-width:375px){
+  .card{
+    flex-direction: column;
+    padding:0;
+    margin:0;
+    text-align:center;
+    align-content: center;
+    width:100%;
+
+  }
+}
+
 .cards{
   padding-bottom: 0.2rem;
 }
