--- a/css/listing.css
+++ b/css/listing.css
@@ -291,7 +291,7 @@ input[type=submit]:hover{
   left:50%;
   margin-left:10rem;
   /* max-width: 57.5%; */
-  margin-top:-2rem;
+  /* margin-top:-2rem; */
   padding:5rem;
 }
 
