--- a/css/main.css
+++ b/css/main.css
@@ -449,6 +449,7 @@ text-align: center;
   align-content:center;
   align-items: center;
   text-align:center;
+  margin-top:2em;
 
   /* margin:0; */
 }
@@ -456,6 +457,7 @@ text-align: center;
 .about-info{
   text-align:center;
   margin-left:3em;
+  margin-bottom:2em;
 }
 
 
@@ -510,4 +512,55 @@ align-items: center;
   text-align:center;
   padding-left:5em;
   padding-right:5em;
+}
+
+
+/* FOOTER */
+footer{
+  padding-top:2em;
+  padding-bottom:2em;
+  border-top: 0.25px solid black ;
+  background-color: #F6F6F6;
+}
+.column1{
+padding-left: 3em;
+}
+
+.column3{
+  padding-right:3em;
+}
+.footer-row{
+  display:flex;
+  justify-content: space-between;
+}
+
+ul{
+padding-left:0;
+}
+li{
+  list-style: none;
+  font-size:14px;
+  line-height: 25px;
+}
+
+li:hover{
+  border-bottom: 1px solid black;
+}
+
+.support{
+  display:flex;
+}
+
+@media screen and (max-width: 600px){
+  .footer-row{
+    flex-direction:column;
+  }
+
+  .column2{
+    padding-left: 3em;
+  }
+
+  .column3{
+    padding-left:3em;
+  }
 }
