--- a/css/article.css
+++ b/css/article.css
@@ -6,6 +6,11 @@ margin-top: 1rem;
   margin: 2rem;
 }
 
+#articlebody{
+      font-size: 15px;
+      line-height:115%;
+}
+
 h1{
   text-align: center;
   font-size: 50px;
@@ -15,11 +20,6 @@ h2{
   text-align: center;
   font-size: 35px;
 
-}
-
-a{
-  text-align: center;
-  font-size: 20px;
 }
 
 a:hover{
@@ -35,6 +35,7 @@ text-align:center;
 @media screen and (max-width:35rem){
   #articlebody{
     margin:0rem;
+    font-size: 15px;
   }
 }
 
