--- a/css/nav.css
+++ b/css/nav.css
@@ -13,31 +13,63 @@ header{
 
 
 .navigation{
+  overflow: hidden;
   display: flex;
+  flex-direction:row;
   align-items: baseline;
   text-align: center;
   justify-content: center;
 
+
 }
 
-nav a{
-  display:inline;
+
+.navigation a{
+  /* display:inline; */
+  display: inline-flex;
+  float:left;
+  text-align: center;
+
   font-family:bodyFont;
   font-size:15px;
   margin:0 1rem 0 1rem;
   padding-bottom:0.5em;
-
-  text-align: center;
   text-decoration: none;
   color: black;
   transition:0.3s;
 }
 
 
-  nav a:hover, nav a:focus {
+  .navigation a:hover {
    border-bottom: 1px solid;
   }
 
+  .navigation .icon{
+    display: none;
+  }
+
+@media screen and (max-width: 600px){
+  .navigation a {display:none;}
+  .navigation a.icon{
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .navigation.responsive {
+    display: block;}
+
+  .navigation.responsive .icon{
+
+  }
+
+  .navigation.responsive a{
+    float:none;
+    display: block;
+    text-align:center;
+  }
+}
 
 .cart-icon{
   margin-right:2rem;
