--- a/css/nav.css
+++ b/css/nav.css
@@ -75,7 +75,7 @@ header{
   margin-right:2rem;
   width:30px;
   height:30px;
-  background-color:#343434;
+  background-color:#4a4a4a;
   color:white;
   border:none;
   border-radius: 50%;
